# ml_ops_excercises

./: Makefile  README.md  data.py  final_checkpoint.pth  main.py  model.py  pyproject.toml  requirements.txt  requirements_pip_freeze.txt
data/raw/: test_images.pt.dvc  test_target.pt.dvc
data/raw/.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
ml_ops_cookie/: __init__.py  predict_model.py  train_model.py
ml_ops_cookie/data/: make_dataset.py
ml_ops_cookie/models/: model.py
models/20240109_105514/: final_checkpoint.pth
models/20240109_110024/: final_checkpoint.pth
models/20240109_124606/: final_checkpoint.pth
