[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_ops_cookie"
version = "0.0.1"
description = "testing cookiecutter"
authors = [
  { name = "ilfuma88", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["ml_ops_cookie"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]


            git rm -r --cached 'train_target_0.pt'
            git commit -m "stop tracking train_target_0.pt" 
            git rm -r --cached 'train_target_1.pt'
            git commit -m "stop tracking train_target_1.pt" 
            git rm -r --cached 'train_target_2.pt'
            git commit -m "stop tracking train_target_2.pt" 
            git rm -r --cached 'train_target_3.pt'
            git commit -m "stop tracking train_target_3.pt" 
                        git rm -r --cached 'train_target_4.pt'
            git commit -m "stop tracking train_target_4.pt" 
                        git rm -r --cached 'train_target_5.pt'
            git commit -m "stop tracking train_target_5.pt" 
            
                        git rm -r --cached 'train_images_6.pt'
            git commit -m "stop tracking train_images_6.pt" 
            git rm -r --cached 'train_images_7.pt'
            git commit -m "stop tracking train_images_7.pt" 
             git rm -r --cached 'train_images_8.pt'
            git commit -m "stop tracking train_images_8.pt" 
            git rm -r --cached 'train_images_0.pt'
            git commit -m "stop tracking train_images_0.pt" 
            git rm -r --cached 'train_images_0.pt'
            git commit -m "stop tracking train_images_0.pt" 
                             